# plugins-workspace

./: Cargo.toml  package.json  pnpm-lock.yaml
.changes/: opener-initial.md
examples/api/: CHANGELOG.md  package.json
examples/api/src/: App.svelte
examples/api/src-tauri/: CHANGELOG.md  Cargo.toml
examples/api/src-tauri/capabilities/: base.json
examples/api/src/views/: Opener.svelte
plugins/deep-link/: Cargo.toml
plugins/dialog/: CHANGELOG.md  Cargo.toml
plugins/fs/: CHANGELOG.md  Cargo.toml
plugins/http/: CHANGELOG.md  Cargo.toml
plugins/opener/: Cargo.toml  api-iife.js  build.rs  package.json
plugins/opener/guest-js/: index.ts  init.ts
plugins/opener/permissions/: allow-default-urls.toml  default.toml
plugins/opener/permissions/autogenerated/: reference.md
plugins/opener/permissions/autogenerated/commands/: reveal_in_dir.toml
plugins/opener/permissions/schemas/: schema.json
plugins/opener/src/: commands.rs  config.rs  error.rs  init-iife.js  lib.rs  open.rs  reveal_item_in_dir.rs  scope.rs  scope_entry.rs  show_item_in_dir.rs
plugins/persisted-scope/: CHANGELOG.md  Cargo.toml
plugins/shell/src/: lib.rs
plugins/single-instance/: Cargo.toml
plugins/single-instance/src/platform_impl/: windows.rs
plugins/upload/: Cargo.toml
plugins/websocket/: Cargo.toml
plugins/websocket/src/: lib.rs
